--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress": "cypress open",
+    "cypress-headless": "rm -rf reports && cypress run && node reporters/combine-reports.js --reportsFolder=reports"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +23,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "commander": "^2.19.0",
+    "cypress": "^3.1.3",
+    "folktale": "^2.3.1",
+    "lodash": "^4.17.11",
+    "mocha": "^5.2.0",
+    "rxjs": "^6.3.3",
+    "uuid": "^3.3.2"
+  }
 }
